Fixed problems with having to shift canvas and scrollbars not being contained as intended

--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,28 @@
 *::-webkit-scrollbar {
   width: 15px;
   height: 15px;
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-button {
+  display: none;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
 
 *::-webkit-scrollbar-thumb {
   border-radius: 0px;
   background-color: #757575;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #00000000;
+}
+
+*::-webkit-scrollbar-track-piece {
+  background-color: #00000000;
 }
 
 *::-webkit-scrollbar-thumb:hover {
